# llm-edge-maritime

./: README.md  pyproject.toml
data/: batch_label.py  claude_batch2.jsonl  claude_labeled.jsonl  generate.py  rule_label.py  schema.py  train_data.jsonl
edge/: deploy.py
eval/: helm.py
notebooks/: COLAB_EVAL.md  COLAB_FINETUNE.md  eval_gemma.ipynb
output/: results_gemma2b_finetuned.json  results_gemma2b_raw.json  results_raw_e2b.json  training_history.json
train/: lora.py
viz/: visualize.py
